# device_board_kaihong

./: BUILD.gn  Kconfig.liteos_m.boards  Kconfig.liteos_m.defconfig.boards  Kconfig.liteos_m.shields  LICENSE  NOTICE  OAT.xml  README.en.md  README.md  README_zh.md
khdvk-3566b/: BUILD.gn  README_zh.md  device.gni  ohos.build
khdvk-3566b/audio_drivers/: Makefile
khdvk-3566b/audio_drivers/dai/include/: rk3568_dai_linux.h  rk3568_dai_ops.h
khdvk-3566b/audio_drivers/dai/src/: rk3568_dai_adapter.c  rk3568_dai_ops.c
khdvk-3566b/audio_drivers/dsp/src/: rk3568_dsp_ops.c
khdvk-3566b/audio_drivers/headset_monitor/include/: analog_headset.h  analog_headset_base.h  analog_headset_ev.h
khdvk-3566b/audio_drivers/headset_monitor/src/: analog_headset_adc.c  analog_headset_base.c  analog_headset_core.c  analog_headset_gpio.c
khdvk-3566b/audio_drivers/include/: audio_device_log.h
khdvk-3566b/audio_drivers/soc/src/: rk3568_dma_adapter.c  rk3568_dma_ops.c
khdvk-3566b/bootanimation/: BUILD.gn
khdvk-3566b/camera/: BUILD.gn
khdvk-3566b/camera/device_manager/: BUILD.gn
khdvk-3566b/camera/driver_adapter/test/: BUILD.gn
khdvk-3566b/camera/pipeline_core/: BUILD.gn
khdvk-3566b/distributedhardware/: BUILD.gn  distributed_hardware_components_cfg.json
khdvk-3566b/kernel/: build_kernel.sh  make-boot.sh
khdvk-3566b/kernel/config/: rk3566-rp-kh.dts  rk3566_rp_linux_defconfig
khdvk-3566b/kernel/sdk-linux/kernel/: cpu.c
khdvk-3566b/loader/: parameter-ubuntu-fit.txt
khdvk-3566b/package_script/: build.sh  mk-fitimage.sh  package.sh  rk3566-rp-package-file  rk356x-mkupdate.sh  rp-rk3566-ramdisk.mk
khdvk-3566b/rootfs/: BUILD.gn  init.rk3566.cfg
khdvk-3566b/updater/: BUILD.gn
khdvk-3566b/wifi/bcmdhd_hdf/: Makefile
khdvk-3566b/wifi/bcmdhd_hdf/bcmdhd/: aiutils.c  bcm_app_utils.c  bcmsdh.c  bcmsdh_linux.c  bcmsdh_sdmmc.c  bcmspibrcm.c  bcmutils.c  bcmwifi_channels.h  dbus.c  dbus_usb_linux.c  dhd.h  dhd_bus.h  dhd_cfg80211.c  dhd_cfg80211.h  dhd_common.c  dhd_config.c  dhd_config.h  dhd_csi.c  dhd_custom_gpio.c  dhd_custom_memprealloc.c  dhd_debug.c  dhd_flowring.h  dhd_gpio.c  dhd_linux.c  dhd_linux.h  dhd_msgbuf.c  dhd_pcie.c  dhd_pcie.h  dhd_pcie_linux.c  dhd_pno.c  dhd_rtt.c  dhd_sdio.c  dhd_static_buf.c  dhd_wlfc.c  dngl_stats.h  dngl_wlhdr.h  hnd_pktpool.c  hnd_pktq.c  linux_osl.c  otpdefs.h  (+17 more)
khdvk-3566b/wifi/bcmdhd_hdf/hdf/: hdf_bdh_mac80211.c  hdf_comm.c  hdf_driver_bdh_register.c  hdf_mac80211_ap.c  hdf_mac80211_p2p.c  hdf_mac80211_sta.c  hdf_mac80211_sta.h  hdf_mac80211_sta_event.c  hdf_mac80211_sta_event.h  hdf_public_ap6275s.h  hdf_wl_interface.h  hdfinit_bdh.c  net_bdh_adpater.c  net_bdh_adpater.h
khdvk_3566b/: BUILD.gn  NOTICE  README_zh.md  bundle.json  device.gni
khdvk_3566b/audio_drivers/: Makefile
khdvk_3566b/audio_drivers/dai/include/: rk3568_dai_ops.h
khdvk_3566b/audio_drivers/dai/src/: rk3568_dai_adapter.c  rk3568_dai_linux_driver.c
khdvk_3566b/audio_drivers/dsp/include/: rk3568_dsp_ops.h
khdvk_3566b/audio_drivers/dsp/src/: rk3568_dsp_ops.c
khdvk_3566b/audio_drivers/headset_monitor/src/: analog_headset_base.c  analog_headset_core.c
khdvk_3566b/audio_drivers/soc/include/: rk3568_dma_ops.h
khdvk_3566b/audio_drivers/soc/src/: rk3568_dma_adapter.c
khdvk_3566b/bluetooth/: BUILD.gn
khdvk_3566b/bootanimation/: BUILD.gn
khdvk_3566b/camera/: BUILD.gn
khdvk_3566b/camera/demo/: BUILD.gn
khdvk_3566b/camera/demo/include/: project_camera_demo.h
khdvk_3566b/camera/device_manager/: BUILD.gn
khdvk_3566b/camera/device_manager/include/: imx600.h  project_hardware.h  rkispv5.h
khdvk_3566b/camera/device_manager/src/: imx600.cpp  rkispv5.cpp
khdvk_3566b/camera/driver_adapter/: BUILD.gn
khdvk_3566b/camera/driver_adapter/test/: BUILD.gn
khdvk_3566b/camera/metadata_manager/: BUILD.gn
khdvk_3566b/camera/pipeline_core/: BUILD.gn
khdvk_3566b/distributedhardware/: BUILD.gn  distributed_hardware_components_cfg.json
khdvk_3566b/kernel/: build_kernel.sh  make-boot.sh  make_ohos.sh  rk3566-rp-kh.dts  rk3566_rp_linux_defconfig
khdvk_3566b/kernel/audio/: Makefile
khdvk_3566b/kernel/audio/include/: audio_device_log.h  rk3568_audio_common.h
khdvk_3566b/kernel/bluetooth/: BUILD.gn
khdvk_3566b/kernel/bluetooth/src/: bt_vendor_brcm.c  hardware.c  userial_vendor.c
khdvk_3566b/kernel/config/: rk3566_rp_linux_defconfig
khdvk_3566b/kernel/modem/: option.c
khdvk_3566b/kernel/panel/: Kconfig  Makefile  mipi_jdi_gt911.c  mipi_jdi_gt911.h
khdvk_3566b/kernel/sdk-linux/: Kconfig
khdvk_3566b/kernel/sdk-linux/scripts/: Makefile.lib
khdvk_3566b/kernel/sdk_linux/: Makefile
khdvk_3566b/kernel/sdk_linux/init/: Kconfig  main.c
khdvk_3566b/kernel/touchscreen/: Makefile  touch_gt911.c  touch_jdi_gt911.c  touch_jdi_gt911.h
khdvk_3566b/loader/: README.md  config.cfg  parameter-fit.txt  ramdisk.img
khdvk_3566b/package_script/: BoardConfig.mk  Version.mk  build.sh  mk-fitimage.sh  package.sh  rp-rk3566-ramdisk.mk
khdvk_3566b/rootfs/: BUILD.gn  fstab.required  fstab.rk3566  init.cfg  init.rk3566.cfg
khdvk_3566b/updater/: BUILD.gn
khdvk_3566b/updater/config/: fstab.updater  init.cfg  init.usb.cfg  init.usb.configfs.cfg
khdvk_3566b/wifi/: BUILD.gn  Makefile
khdvk_3566b/wifi/ap6xxx/: nvram_ap6275s.txt
khdvk_3566b/wifi/bcmdhd_hdf/: Makefile
khdvk_3566b/wifi/bcmdhd_hdf/bcmdhd/: aiutils.c  bcm_app_utils.c  bcmbloom.c  bcmevent.c  (+118 more)
khdvk_450a/liteos_m/: BUILD.gn  config.gni
khdvk_450a/liteos_m/bsp/: BUILD.gn
khdvk_450a/liteos_m/display/: BUILD.gn  disp_hal_hdf.c  display_gfx.c  display_gralloc.c  display_layer.c  lcd_abs_if.c  lcd_abs_if.h  lcd_gd32f4xx.c  lcd_hardware_init.c  lcd_hardware_init.h  tli_ipa_config.c  tli_ipa_config.h
khdvk_450a/liteos_m/drivers/: BUILD.gn  Kconfig
khdvk_450a/liteos_m/ethernet/: BUILD.gn
khdvk_450a/liteos_m/hdf_config/: BUILD.gn  hdf.hcs
khdvk_450a/liteos_m/key_input/: BUILD.gn  key_input_gd32f450.c  key_input_gd32f450.h
khdvk_450a/liteos_m/logo/: BUILD.gn
khdvk_450a/liteos_m/ui/: BUILD.gn  display_device.cpp  display_device.h  fbdev.cpp  fbdev.h  key_input.cpp  key_input.h  ui_main.cpp  ui_main.h
(+405 files in other folders)
