# Copyright (C) 2021 HiHope Open Source Organization .

import("//build/ohos.gni")
import("//build/config/clang/clang.gni")

print("khdvk-3566b_group in")
group("khdvk-3566b_group") {
  deps = [
    ":kernel",
    "rootfs:init_configs",
    "distributedhardware:distributedhardware",
    "bootanimation:bootanimation",
    "updater:updater_files",
  ]
}

kernel_build_script_dir = "//kernel/linux/linux-5.10"
kernel_source_dir = "//kernel/linux/linux-5.10"

action("kernel") {
   script = "kernel/build_kernel.sh"
   sources = [ kernel_source_dir ]

   product_path = "vendor/$product_company/$product_name"

   if (enable_ramdisk) {   
      product_configfile  = "rp-rk3566-ramdisk.mk"
      ramdisk = "true"
   }
   else
   {
      product_configfile  = "rp-rk3566-ubuntu.mk"
      ramdisk = "false"
   }
   outputs = [ "$root_build_dir/packages/phone/images" ]
   args = [
    rebase_path(kernel_build_script_dir, root_build_dir),
    rebase_path("$root_out_dir/../KERNEL_OBJ"),
    rebase_path("$root_build_dir/packages/phone/images"),
    rebase_path("//device/board/kaihong/khdvk-3566b"),
    product_path,
    product_configfile,
    device_name,
    ramdisk,
    product_company,
  ]
}
