# Copyright (c) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/config/clang/clang.gni")

print("khdvk_3566b_group in")
group("khdvk_3566b_group") {
  deps = [
    ":kernel",
    "rootfs:init_configs",
    "distributedhardware:distributedhardware",
    "updater:updater_files",
    "wifi:ap6xxx",
    "bluetooth:libbt_vendor",
    "bluetooth:BCM4345C5.hcd",
    "//device/soc/rockchip/rk3566/hardware:hardware_group",

  ]
}

kernel_build_script_dir = "//kernel/linux/linux-5.10"
kernel_source_dir = "//kernel/linux/linux-5.10"

action("kernel") {
   script = "kernel/build_kernel.sh"
   sources = [ kernel_source_dir ]
   product_path = "vendor/$product_company/$product_name"

   outputs = [ "$root_build_dir/packages/phone/images" ]
   args = [
    rebase_path(kernel_build_script_dir, root_build_dir),
    rebase_path("$root_out_dir/../KERNEL_OBJ"),
    rebase_path("$root_build_dir/packages/phone/images"),
    rebase_path("//device/board/kaihong/khdvk_3566b"),
    device_name,
    product_path,
    product_company,
  ]
}
