# Copyright (C) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("init.rk3566.cfg") {
  source = "init.rk3566.cfg"
  part_name = "kaihong_products"
  install_images = [ vendor_base_dir]
  install_enable = true
}

ohos_prebuilt_etc("init.rk3566.usb.cfg") {
  source = "init.rk3566.usb.cfg"
  part_name = "kaihong_products"
  install_images = [ vendor_base_dir]
  install_enable = true
}

ohos_prebuilt_etc("init.cfg") {
  source = "init.cfg"
  part_name = "kaihong_products"
  install_images = [ "system" ]
  install_enable = true
}

ohos_prebuilt_etc("fstab.rk3566") {
  source = "fstab.rk3566"
  part_name = "kaihong_products"
  install_images = [ vendor_base_dir ]
  install_enable = true
}

if (enable_ramdisk) {
  ohos_prebuilt_etc("fstab.required") {
    source = "fstab.required"
    part_name = "kaihong_products"
    install_images = [ "ramdisk" ]
    install_enable = true
  }
} else {
  ohos_prebuilt_etc("fstab.required") {
    source = "fstab.required"
    part_name = "kaihong_products"
    install_images = [ "system" ]
    install_enable = true
  }
}

group("init_configs") {
  deps = [
    ":fstab.required",
    ":fstab.rk3566",
    ":init.cfg",
    ":init.rk3566.cfg",
    ":init.rk3566.usb.cfg",
  ]
}
