# Copyright (c) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

updater_usb_init_cfg_path = "//base/startup/init/services/etc/init.usb.cfg"
updater_init_usb_configfs_path_cfg =
    "//drivers/peripheral/usb/cfg/init.usb.configfs.cfg"
updater_faultloggerd_cfg =
    "//base/hiviewdfx/faultloggerd/services/config/faultloggerd.cfg"
updater_hilog_cfg = "//base/hiviewdfx/hilog/services/hilogd/etc/hilogd.cfg"
ohos_prebuilt_etc("updater_hilog.cfg") {
  source = "${updater_hilog_cfg}"
  install_images = [ "updater" ]
  part_name = "kaihong_products"
}
ohos_prebuilt_etc("updater_faultloggerd.cfg") {
  source = "${updater_faultloggerd_cfg}"
  install_images = [ "updater" ]
  part_name = "kaihong_products"
}
ohos_prebuilt_etc("updater_init.cfg") {
  source = "config/init.cfg"
  install_images = [ "updater" ]
  part_name = "kaihong_products"
}

ohos_prebuilt_etc("updater_init_usb.cfg") {
  source = "${updater_usb_init_cfg_path}"
  install_images = [ "updater" ]
  part_name = "kaihong_products"
}

ohos_prebuilt_etc("updater_init_usb_configfs.cfg") {
  source = "${updater_init_usb_configfs_path_cfg}"
  install_images = [ "updater" ]
  part_name = "kaihong_products"
}

# ohos_prebuilt_etc("updater_init_rk3568_usb.cfg") {
#   source = "config/init.rk3568.usb.cfg"
#   install_images = [ "updater" ]
#   part_name = "kaihong_products"
# }
ohos_prebuilt_etc("signing_cert.crt") {
  source = "config/signing_cert.crt"
  module_install_dir = "etc/certificate"
  install_images = [
    "system",
    "updater",
  ]
  part_name = "kaihong_products"
}

ohos_prebuilt_etc("fstab.updater") {
  source = "config/fstab.updater"
  install_images = [ "updater" ]
  part_name = "kaihong_products"
}

if (enable_ramdisk) {
  ohos_copy("updater_ramdisk_resource_config.ini") {
    sources = [ "updater_ramdisk_resource_config.ini" ]
    outputs =
        [ "$product_output_dir/phone/updater_ramdisk_resource_config.ini" ]
  }
}

group("updater_files") {
  deps = [
    ":fstab.updater",
    ":signing_cert.crt",
    ":updater_faultloggerd.cfg",
    ":updater_hilog.cfg",
    ":updater_init.cfg",
    ":updater_init_usb_configfs.cfg",
  ]
  if (enable_ramdisk) {
    deps += [ ":updater_ramdisk_resource_config.ini" ]
  }
}
