# Copyright (C) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

AP6XXX_ETC_DIR = "//device/board/kaihong/khdvk_3566b/wifi/ap6xxx"
DNS_CONFIG_DIR = "//device/board/kaihong/khdvk_3566b/wifi"


ohos_prebuilt_etc("fw_bcm43456c5_ag.bin") {
  source = "$AP6XXX_ETC_DIR/fw_bcm43456c5_ag.bin"
  install_images = [ vendor_base_dir ]
  relative_install_dir = "firmware"
  part_name = "kaihong_products"
  install_enable = true
}

ohos_prebuilt_etc("nvram_ap6256.txt") {
  source = "$AP6XXX_ETC_DIR/nvram_ap6256.txt"
  install_images = [ vendor_base_dir ]
  relative_install_dir = "firmware"
  part_name = "kaihong_products"
  install_enable = true
}

ohos_prebuilt_etc("resolv.conf") {
  source = "$DNS_CONFIG_DIR/etc/resolv.conf"
  install_images = [ "system" ]
  part_name = "kaihong_products"
  install_enable = true
}

group("ap6xxx") {
  deps = [
    ":fw_bcm43456c5_ag.bin",
    ":nvram_ap6256.txt",
    ":resolv.conf",
  ]
}
