# Copyright (c) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  kh_ace_enable = false
}

import("//drivers/hdf_core/adapter/khdf/liteos_m/hdf.gni")

config("public") {
  include_dirs = [ "." ]
}

hdf_driver("ui_adapter") {
  sources = [
    "display_device.cpp",
    "fbdev.cpp",
    "ui_main.cpp",
  ]

  if (defined(LOSCFG_DRIVERS_USER_KEY_INPUT)) {
    sources += [ "key_input.cpp" ]
  }

  public_configs = [ ":public" ]
  public_deps = [ "//foundation/graphic/ui:ui" ]
  if (kh_ace_enable) {
    defines = [ "ENABLE_ACE" ]
    public_deps += [ "//foundation/arkui/ace_engine_lite/frameworks:ace_lite" ]
  }

  include_dirs = [
    "//drivers/peripheral/display/interfaces/include",
    "//drivers/peripheral/base",
    "//foundation/graphic/ui/frameworks",
    "//third_party/freetype/include",
    "//device/board/kaihong/khdvk_450a/liteos_m/key_input",
    "//device/board/kaihong/khdvk_450a/liteos_m/ui",
  ]
}
