# Copyright (c) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//drivers/hdf_core/adapter/khdf/liteos_m/hdf.gni")

module_switch = defined(LOSCFG_DRIVERS_HDF_USER_I2C)
module_name = get_path_info(rebase_path("."), "name")
hdf_driver(module_name) {
  sources = [ "i2c_gd32f4xx.c" ]
  include_dirs = [ "../../sdk/drivers/gd32f4xx_driver/include" ]

  if (defined(LOSCFG_DRIVERS_HDF_CONFIG_MACRO)) {
    HDF_HCS_BUILD_PATH = rebase_path(
            "//device/board/$device_company/$device_name/liteos_m/hdf_config")
    cmd = "if [ -f ${HDF_HCS_BUILD_PATH}/BUILD.gn ]; then echo true; else echo false; fi"
    HAVE_HCS_BUILD_PATH =
        exec_script("//build/lite/run_shell_cmd.py", [ cmd ], "value")
    if (HAVE_HCS_BUILD_PATH) {
      deps = [ "${HDF_HCS_BUILD_PATH}" ]
    }
  }
}
